--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,6 +2,11 @@
 
 {% block title %}Accueil{% endblock %}
 
+{% block stylesheets %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <section class="row">
@@ -81,32 +86,52 @@
                 <h2>A Subtitle</h2>
             </div>
             <div class="row">
-                <!-- Caroussel
-                ================================================== -->
-                <div id="monCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicateurs -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#monCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#monCarousel" data-slide-to="1"></li>
-                    </ol>
-                    <!-- Diapositives -->
+                <!-- Carousel -->
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+                    <!-- Indicators -->
+                    <ul class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ul>
+
+                    <!-- The slideshow -->
                     <div class="carousel-inner">
-                        <div class="item active">
+                        <div class="carousel-item active">
                             <img src="{{ asset('images/img.jpeg') }}" alt="">
-                            <!--<div class="carousel-caption">
-                                <h3>Un design futuriste</h3>
-                            </div>-->
+                            <div class="carousel-caption">
+                                <h3>Image à l'endroit</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
                         </div>
-                        <div class="item">
-                            <img src="{{ asset('images/img.jpeg') }}" alt="">
-                            <!--<div class="carousel-caption">
-                                <h3>Des formes sublimes</h3>
-                            </div>-->
+                        <div class="carousel-item">
+                            <img src="{{ asset('images/img2.jpeg') }}" alt="">
+                            <div class="carousel-caption">
+                                <h3>Image à l'envers</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ asset('images/img3.jpeg') }}" alt="">
+                            <div class="carousel-caption">
+                                <h3>Image en noir et blanc</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
                         </div>
                     </div>
+
+                    <!-- Left and right controls -->
+                    <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+
                 </div>
             </div>
-            <div class="row">
+            <div class="col-xs-12 col-lg-12">
                 <a href="#">
                     <button>Button</button>
                 </a>
@@ -114,7 +139,7 @@
         </section>
 
         <section class="row">
-            <div class="col-xs-0 col-lg-6">
+            <div class="col-xs-0 col-xs-none col-lg-6">
                 <img src="{{ asset('images/img.jpeg') }}" height="250" width="250">
             </div>
             <div class="col-xs-12 col-lg-6">
