page propos created

--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,21 +1,21 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    <link href="{{ asset('CSS/catalog.css') }}" rel="stylesheet">
+    <link href="{{ asset('CSS/contact.css') }}" rel="stylesheet">
     <div class="container-fluid">
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-md-4 col-lg-4" style="border-style: solid;">
-                        <h1>Big Title</h1>
-                        <h3>Subtitle</h3>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis.</p>
-                    </div>
-                    <div class="col-md-4 col-lg-4" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
+            <div class="row">
+                <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
+                    <div class="row d-flex justify-content-around">
+                        <div class="col-md-4 col-lg-4" style="border-style: solid;">
+                            <h1>Big Title</h1>
+                            <h3>Subtitle</h3>
+                            <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis.</p>
+                        </div>
+                        <div class="col-md-4 col-lg-4" style="border-style: solid;">
+                            <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         <div class="row">
             <div class="offset-md-4 offset-lg-4 col-md-4 col-lg-4" style="border-style: solid;">
                 <div class="text-center">
