fix css block stylesheets

--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -1,6 +1,8 @@
 {% extends "base.html.twig" %}
-{% block body %}
+{% block stylesheets %}
     <link href="{{ asset('CSS/catalog.css') }}" rel="stylesheet">
+{% endblock %}
+{% block body %}
     <div class="container-fluid">
         <div class="row">
             <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
