--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ asset('CSS/bootstrap.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ asset('CSS/base.css') }}">
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
