--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -1,6 +1,8 @@
 {% extends "base.html.twig" %}
+{% block stylesheets %}
+    <link href="{{ asset('CSS/propos.css') }}" rel="stylesheet">
+{% endblock %}
 {% block body %}
-<link href="{{ asset('CSS/propos.css') }}" rel="stylesheet">
     <div class="container-fluid">
         <div class="row">
             <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
