add link blog in nav

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
                     <li><a href="{{ path('catalog_page') }}">Nos services</a></li>
                     <li><a href="#">Nos clients</a></li>
                     <li><a href="{{ path('propos_page') }}">A propos</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="{{ path('blog_page') }}">Blog</a></li>
                     <li><a href="{{ path('contact_page') }}">Nous contacter</a> </li>
                 </ul>
 
