--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -5,12 +5,12 @@
 {% block body %}
     <div class="container-fluid">
         <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
+            <div class="col-md-12 col-lg-12" style="border-style: solid;">
                 <div class="row">
-                    <div class=" col-xs-11 col-md-5 col-lg-5" style="border-style: solid;">
+                    <div class="col-sm-11 col-md-12 col-lg-5" style="border-style: solid;">
                         <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
                     </div>
-                    <div class="offset-md-1 offset-lg-1 col-xs-11 col-md-5 col-lg-5" style="border-style: solid;">
+                    <div class="offset-lg-1 col-xs-11 col-md-12 col-lg-5" style="border-style: solid;">
                         <h2>Subtitle</h2>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis, siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae poscebant.</p>
 
