--- a/templates/admin/connexion.html.twig
+++ b/templates/admin/connexion.html.twig
@@ -51,14 +51,15 @@
 							<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 							<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 						</ol>
 						<div class="carousel-inner" role="listbox">
 							<div class="carousel-item active">
 								<img class="d-block img-fluid" src="{{ asset('images/admin/people-coffee-tea-meeting.jpg') }}" alt="First slide">
 								<div class="carousel-caption d-none d-md-block">
 									<div class="banner-text">
-										<h2>This is Heaven</h2>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+										<h2>Bill Cosby</h2>
+										<p>Pour réussir, votre désir de réussite doit être plus grand que votre peur de l’échec</p>
 									</div>
 								</div>
 							</div>
@@ -66,17 +67,26 @@
 								<img class="d-block img-fluid" src="{{ asset('images/admin/pexels-photo.jpg') }}" alt="First slide">
 								<div class="carousel-caption d-none d-md-block">
 									<div class="banner-text">
-										<h2>This is Heaven</h2>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+										<h2>Winston Churchill</h2>
+										<p>Le succès c’est d’aller d’échec en échec sans perdre son enthousiasme.</p>
 									</div>
 								</div>
 							</div>
 							<div class="carousel-item">
-								<img class="d-block img-fluid" src="{{ asset('images/admin/people-coffee-tea-meeting.jpg') }}" alt="First slide">
+								<img class="d-block img-fluid" src="{{ asset('images/admin/office-1209640_960_720.jpg') }}" alt="First slide">
 								<div class="carousel-caption d-none d-md-block">
 									<div class="banner-text">
-										<h2>This is Heaven</h2>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+										<h2>Thomas Edison</h2>
+										<p> Le génie est fait d’un pour cent d’inspiration et de quatre-vingt-dix-neuf pour cent de transpiration.</p>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="d-block img-fluid" src="{{ asset('images/admin/home-office-1867761_960_720.jpg') }}" alt="First slide">
+								<div class="carousel-caption d-none d-md-block">
+									<div class="banner-text">
+										<h2>Alfred de Musset</h2>
+										<p>Pour réussir, retenez bien ces trois maximes: voir c’est savoir, vouloir c’est pouvoir, oser c’est avoir. </p>
 									</div>
 								</div>
 							</div>
