--- a/templates/admin/connexion.html.twig
+++ b/templates/admin/connexion.html.twig
@@ -1,93 +1,92 @@
-{% extends 'admin/base.html.twig' %}
-
-{% block title %}Accueil backoffice{% endblock %}
-
-{% block stylesheets %}
-	<link href="{{ asset('CSS/admin/connexion.css') }}" rel="stylesheet">
-{% endblock %}
-
-{% block body %}
-	<section class="login-block">
-		<div class="container">
-			<!--Gestion des erreurs de connexion -->
-            {% if error is defined %}
-                {% if error == 'error' %}
-					<div class='row'>
-						<div class="col-lg-3 col-md-5 col-sm-6 mx-auto">
-							<strong>L'identifiant ou le mot de passe et incorrect !</strong>
-						</div>
+<head>
+	<meta charset="UTF-8">
+	<meta name="robots" content="noindex">
+	<meta name="googlebot" content="noindex">
+	<title>Accueil backoffice</title>
+	<link rel="stylesheet" type="text/css" href="{{ asset('CSS/bootstrap.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ asset('CSS/admin/connexion.css') }}">
+</head>
+<body>
+<section class="login-block">
+	<div class="container">
+		<!--Gestion des erreurs de connexion -->
+        {% if error is defined %}
+            {% if error == 'error' %}
+				<div class='row'>
+					<div class="col-lg-3 col-md-5 col-sm-6 mx-auto">
+						<strong>L'identifiant ou le mot de passe et incorrect !</strong>
 					</div>
-					<div class='row'>
-						<div class="col-lg-3 col-md-5 col-sm-6 mx-auto">
-							<strong>Veuillez recommencer</strong>
-						</div>
-					</div>
-                {% endif %}
-            {% endif %}
-			<div class="row">
-				<div class="col-md-4 login-sec">
-					<h2 class="text-center">Cocorico Digital</h2>
-					<form class="login-form">
-						<div class="form-group">
-							<label for="exampleInputEmail1" class="text-uppercase">Login</label>
-							<input type="text" class="form-control" placeholder="">
-
-						</div>
-						<div class="form-group">
-							<label for="exampleInputPassword1" class="text-uppercase">Mot de passe</label>
-							<input type="password" class="form-control" placeholder="">
-						</div>
-
-
-						<div class="form-check">
-							<button type="submit" class="btn btn-login float-right">Connexion</button>
-						</div>
-
-					</form>
 				</div>
-				<div class="col-md-8 banner-sec">
-					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-						<ol class="carousel-indicators">
-							<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-							<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-							<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-						</ol>
-						<div class="carousel-inner" role="listbox">
-							<div class="carousel-item active">
-								<img class="d-block img-fluid" src="{{ asset('images/admin/people-coffee-tea-meeting.jpg') }}" alt="First slide">
-								<div class="carousel-caption d-none d-md-block">
-									<div class="banner-text">
-										<h2>Bill Cosby</h2>
-										<p>Pour réussir, votre désir de réussite doit être plus grand que votre peur de l’échec</p>
-									</div>
+				<div class='row'>
+					<div class="col-lg-3 col-md-5 col-sm-6 mx-auto">
+						<strong>Veuillez recommencer</strong>
+					</div>
+				</div>
+            {% endif %}
+        {% endif %}
+		<div class="row">
+			<div class="col-md-4 login-sec">
+				<h2 class="text-center">Cocorico Digital</h2>
+				<form class="login-form">
+					<div class="form-group">
+						<label for="exampleInputEmail1" class="text-uppercase">Login</label>
+						<input type="text" class="form-control" placeholder="">
+
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1" class="text-uppercase">Mot de passe</label>
+						<input type="password" class="form-control" placeholder="">
+					</div>
+
+
+					<div class="form-check">
+						<button type="submit" class="btn btn-login float-right">Connexion</button>
+					</div>
+
+				</form>
+			</div>
+			<div class="col-md-8 banner-sec">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<img class="d-block img-fluid" src="{{ asset('images/admin/people-coffee-tea-meeting.jpg') }}" alt="First slide">
+							<div class="carousel-caption d-none d-md-block">
+								<div class="banner-text">
+									<h2>Bill Cosby</h2>
+									<p>Pour réussir, votre désir de réussite doit être plus grand que votre peur de l’échec</p>
 								</div>
 							</div>
-							<div class="carousel-item">
-								<img class="d-block img-fluid" src="{{ asset('images/admin/pexels-photo.jpg') }}" alt="First slide">
-								<div class="carousel-caption d-none d-md-block">
-									<div class="banner-text">
-										<h2>Winston Churchill</h2>
-										<p>Le succès c’est d’aller d’échec en échec sans perdre son enthousiasme.</p>
-									</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block img-fluid" src="{{ asset('images/admin/pexels-photo.jpg') }}" alt="First slide">
+							<div class="carousel-caption d-none d-md-block">
+								<div class="banner-text">
+									<h2>Winston Churchill</h2>
+									<p>Le succès c’est d’aller d’échec en échec sans perdre son enthousiasme.</p>
 								</div>
 							</div>
-							<div class="carousel-item">
-								<img class="d-block img-fluid" src="{{ asset('images/admin/office-1209640_960_720.jpg') }}" alt="First slide">
-								<div class="carousel-caption d-none d-md-block">
-									<div class="banner-text">
-										<h2>Thomas Edison</h2>
-										<p> Le génie est fait d’un pour cent d’inspiration et de quatre-vingt-dix-neuf pour cent de transpiration.</p>
-									</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block img-fluid" src="{{ asset('images/admin/office-1209640_960_720.jpg') }}" alt="First slide">
+							<div class="carousel-caption d-none d-md-block">
+								<div class="banner-text">
+									<h2>Thomas Edison</h2>
+									<p> Le génie est fait d’un pour cent d’inspiration et de quatre-vingt-dix-neuf pour cent de transpiration.</p>
 								</div>
 							</div>
-							<div class="carousel-item">
-								<img class="d-block img-fluid" src="{{ asset('images/admin/home-office-1867761_960_720.jpg') }}" alt="First slide">
-								<div class="carousel-caption d-none d-md-block">
-									<div class="banner-text">
-										<h2>Alfred de Musset</h2>
-										<p>Pour réussir, retenez bien ces trois maximes: voir c’est savoir, vouloir c’est pouvoir, oser c’est avoir. </p>
-									</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-block img-fluid" src="{{ asset('images/admin/home-office-1867761_960_720.jpg') }}" alt="First slide">
+							<div class="carousel-caption d-none d-md-block">
+								<div class="banner-text">
+									<h2>Alfred de Musset</h2>
+									<p>Pour réussir, retenez bien ces trois maximes: voir c’est savoir, vouloir c’est pouvoir, oser c’est avoir. </p>
 								</div>
 							</div>
 						</div>
@@ -95,9 +94,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
+</body>
 
-{% endblock %}
-{% block javascripts %}
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-{% endblock %}
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="{{ asset('JS/bootstrap.js') }}"></script>
