--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -22,7 +22,7 @@
                     <li><a href="#">Accueil</a></li>
                     <li><a href="#">Article</a></li>
                     <li><a href="#">Compte</a></li>
-                    <li><a href="#">Deconexion</a></li>
+                    <li><a href="{{ path('logout') }}">Deconexion</a></li>
                 </ul>
 
             </nav>
