Create structure of references page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="{{ path('home_page') }}">Accueil</a></li>
                     <li><a href="{{ path('catalog_page') }}">Nos services</a></li>
-                    <li><a href="#">Nos clients</a></li>
+                    <li><a href="{{ path('reference_page') }}">Nos clients</a></li>
                     <li><a href="{{ path('propos_page') }}">A propos</a></li>
                     <li><a href="{{ path('blog_page') }}">Blog</a></li>
                     <li><a href="{{ path('contact_page') }}">Nous contacter</a> </li>
