--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -22,6 +22,9 @@
                     <li><a href="#">Accueil</a></li>
                     <li><a href="#">Article</a></li>
                     <li><a href="#">Compte</a></li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li><a href="#">Admin comptes</a></li>
+                    {% endif %}
                     <li><a href="{{ path('logout') }}">Deconexion</a></li>
                 </ul>
 
