--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -19,7 +19,7 @@
         <div  class="col-lg-8">
             <nav id="nav">
                 <ul>
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="{{ path('dashboard') }}">Accueil</a></li>
                     <li><a href="{{ path('articles') }}">Articles</a></li>
                     <li><a href="#">Compte</a></li>
                     {% if is_granted('ROLE_ADMIN') %}
