--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -1,28 +1,87 @@
-@media screen and (min-width: 1280px) {
-    nav {
-        display: inline-block;
-        text-align: center;
-        width: 100%;
-    }
-    nav ul
-    {
-        list-style-type: none;
-    }
+/* FONTS */
+@import url('https://fonts.googleapis.com/css?family=Nunito:700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
 
-    nav li
-    {
-        display: inline-block;
-        margin-right: 15px;
-    }
-    nav a
-    {
-        padding-bottom: 3px;
-        text-decoration: none;
-        color: black;
-    }
-    nav a:hover
-    {
-        color: black;
-        text-decoration: none;
-    }
+/* CONTENT */
+body {
+    width: 100%;
+}
+
+h1 {
+    font-family: 'Nunito', sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    color: #68C1DD;
+
+}
+
+h2, h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    letter-spacing: 7px;
+}
+
+h2 {
+    color: #373737
+}
+
+h3 {
+    color: #FCFCFC
+}
+
+h4, h5 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+}
+
+h4 {
+    font-size: 20px;
+    color: #CC0056;
+    line-height: 28px;
+    letter-spacing: 13px;
+}
+
+h5 {
+    font-size: 12px;
+    color: #373737;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+/* --- HEADER --- */
+#header-main {
+    background-color: #FFF;
+    height: 70px;
+}
+
+#logo-nav {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 20px;
+    padding-right: 0;
+}
+
+#div-nav{
+    padding-left: 40px;
+}
+
+#nav > h5 {
+    display: inline-block;
+    margin-right: 50px;
+}
+
+#nav > h5 > a {
+    color: #68C1DD;
+
+}
+
+/* --- CONTENT --- */
+.container-fluid {
+    background-color: #FCFCFC;
+}
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 1280px) {
+img{border:1px red solid}
 }
