--- a/public/CSS/home.css
+++ b/public/CSS/home.css
@@ -6,11 +6,9 @@ button {
     margin-top: 2em;
 }
 
-header {
-    margin-bottom: 10em;
-}
 
-img:not(.display-small) {
+
+img:not(.display-small, #logo-nav img) {
     display: block;
     margin-left:auto;
     margin-right: auto;
