change date on entity article

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -35,7 +35,7 @@
 								<h5>{{ article.title }}</h5>
 							</div>
 							<div class="col-md-2 col-lg-2">
-								<p>Date</p>
+								<p>{{ article.date|date('d-m-Y') }}</p>
 							</div>
 						</div>
 						<div class="row">
@@ -67,7 +67,7 @@
 								<h5>{{ article.title }}</h5>
 							</div>
 							<div class="col-md-2 col-lg-2">
-								<p>Date</p>
+								<p>{{ article.date|date('d-m-Y') }}</p>
 							</div>
 						</div>
 						<div class="row">
