--- a/templates/admin/articles.html.twig
+++ b/templates/admin/articles.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 	<div class="container-fluid">
 		<div class="row d-flex justify-content-center ">
-			<div class="col-sm-4 col-4 col-md-3 col-lg-3">
+			<div class="col-sm-4 col-4 col-md-3 col-lg-auto">
 				<div class="row">
 					<div class="col-sm-4 col-4 col-md-2 col-lg-2">
 						<img src="images/admin/icone_article.png" alt="Bootstrap" class="img-fluid img-responsive logo">
@@ -18,22 +18,29 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 username">
-				<div class="col-md-4 col-lg-4">
+			<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 d-flex justify-content-between username">
+				<div class="col-md-4 col-lg-4 d-flex align-items-center">
 					<p>Bonjour, <span class="font-weight-bold">{{ app.user.firstname }} {{ app.user.lastname }}</span></p>
+				</div>
+				<div class="col-lg-auto d-flex align-items-center">
+					<label class="" for="inlineFormCustomSelect">Affichage</label>
+					<select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="displayArticle">
+						<option value="user" selected>User</option>
+						<option value="admin">Admin</option>
+					</select>
 				</div>
 			</div>
 		</div>
 		<div class="row d-flex justify-content-center">
 			<div class="row">
-				<div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
+				<div id='user' class="offset-md-1 offset-lg-1 col-md-10 col-lg-10 container_own_article">
                     {% for article in own_articles %}
 						<div class="row d-flex justify-content-between title_article">
 							<div class="col-md-2 col-lg-2">
 								<h5>{{ article.title }}</h5>
 							</div>
 							<div class="col-md-2 col-lg-2">
-								<p>Date</p>
+								<p>{{ article.date|date("d-m-Y") }}</p>
 							</div>
 						</div>
 						<div class="row">
@@ -50,5 +57,10 @@
 				</div>
 			</div>
 		</div>
+		{% include "admin/include_admin_articles.html.twig" %}
 	</div>
+{% endblock %}
+{% block javascripts %}
+	<script src="{{ asset('JS/jquery.js') }}"></script>
+	<script src="{{ asset('JS/articles.js') }}"></script>
 {% endblock %}
